# cube-solver

./: .gitignore  LICENSE  README.md  cube-solver.cabal
src/: Common.hs  Cuboid.hs  Cuboid2.hs  Main.hs  Puzzle.hs  Solver.hs  Transform.hs
