name:              cube-solver
version:           1.0.0
synopsis:          A solver for cube block puzzels
author:            Johan Wermensjö
license:           MIT
license-file:      LICENSE
build-type:        Simple
cabal-version:     >= 1.8

executable cube-solver
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base >= 4, matrix >= 0.3.5, containers >= 0.5.7
